Release 0.8.5
=============

* [FIX] VisibleDeprecationWarning (https://github.com/poldracklab/mriqc/issues/132)
* [ENH] Provide full FD/DVARS files (https://github.com/poldracklab/mriqc/pull/128)
* [ENH] Use MCFLIRT to compute motion parameters. AFNI's 3dvolreg now is optional (https://github.com/poldracklab/mriqc/pull/121)
* [FIX] BIDS trees with anatomical images with different acquisition tokens (https://github.com/poldracklab/mriqc/pull/116)
* [FIX] BIDS trees with anatomical images with several runs (https://github.com/poldracklab/mriqc/issues/112)
* [ENH] Options for ANTs normalization: reduced test times (https://github.com/poldracklab/mriqc/pull/124), and updated options (https://github.com/poldracklab/mriqc/pull/115)

Release 0.8.4
=============

* [ENH] PDF reports now use RST templates and jinja2 (https://github.com/poldracklab/mriqc/pull/109)
* [FIX] Single-session-multiple-run anatomical files were not correctly located (https://github.com/poldracklab/mriqc/pull/112)

Release 0.8.3
=============

* [DOC] Added examples of the PDF reports (https://github.com/poldracklab/mriqc/pull/107)
* [FIX] Fixed problems with Python 3 when generating reports.

Release 0.8.2
=============

* [ENH] Python 3 compatibility (https://github.com/poldracklab/mriqc/issues/99)
* [ENH] Add JSON settings file for ANTS (https://github.com/poldracklab/mriqc/issues/95)
* [ENH] Generate reports automatically if mriqc is run without the -S flag (https://github.com/poldracklab/mriqc/issues/93)
* [FIX] Revised implementation of QI2 measure (https://github.com/poldracklab/mriqc/issues/90)
* [AGAVE] Fixed docker image for agave (https://github.com/poldracklab/mriqc/issues/89)
* [FIX] Problem when generating the air mask with dipy installed (https://github.com/poldracklab/mriqc/issues/88)
* [ENH] One-session-one-run execution mode (https://github.com/poldracklab/mriqc/issues/85)
* [AGAVE] Added an agave app description generator (https://github.com/poldracklab/mriqc/issues/84)
