@@ -3,4 +3,4 @@
 # emacs: -*- mode: python; py-indent-offset: 4; indent-tabs-mode: nil -*-
 # vi: set ft=python sts=4 ts=4 sw=4 et:
 """ Reports module """
-from .generators import workflow_report
+from mriqc.reports.generators import workflow_report
