@@ -3,4 +3,4 @@
 # emacs: -*- mode: python; py-indent-offset: 4; indent-tabs-mode: nil -*-
 # vi: set ft=python sts=4 ts=4 sw=4 et:
 """ Module utils.misc contains utilities """
-from .misc import gather_bids_data, reorder_csv
+from mriqc.utils.misc import gather_bids_data, reorder_csv
