@@ -3,6 +3,6 @@
 # emacs: -*- mode: python; py-indent-offset: 4; indent-tabs-mode: nil -*-
 # vi: set ft=python sts=4 ts=4 sw=4 et:
 
-from .core import ms_anat, ms_func
-from .anatomical import anat_qc_workflow
-from .functional import fmri_qc_workflow
+from mriqc.workflows.core import ms_anat, ms_func
+from mriqc.workflows.anatomical import anat_qc_workflow
+from mriqc.workflows.functional import fmri_qc_workflow
